--- a/app/src/main/res/layout/activity_creer_mon_menu_step1.xml
+++ b/app/src/main/res/layout/activity_creer_mon_menu_step1.xml
@@ -25,11 +25,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:fontFamily="@font/indie_flower"
             android:text="Création de mon Entree"
-            android:textColor="@color/black"
             android:textSize="@dimen/bigSize"
             android:gravity="center_horizontal"
+            style="@style/classicButtonGreen"
             />
     </LinearLayout>
 
@@ -53,7 +52,9 @@
             android:gravity="center_horizontal"
             android:text="Nom :"
             android:textColor="@color/black"
-            android:textSize="@dimen/bigSize" />
+            android:textSize="@dimen/bigSize"
+            style="@style/classicButtonGreen"
+            />
             <EditText
                 android:id="@+id/entreeNameInput"
                 android:layout_width="match_parent"
@@ -67,6 +68,7 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/bigSize"
                 android:text=" "
+                style="@style/classicButtonLightWhite"
                 />
 
 
@@ -87,7 +89,9 @@
                 android:gravity="center_horizontal"
                 android:text="Ingrédients :"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonGreen"
+                />
 
             <EditText
                 android:id="@+id/ingredientEntreeInput"
@@ -102,6 +106,7 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/bigSize"
                 android:text=" "
+                style="@style/classicButtonLightWhite"
                 />
         </LinearLayout>
 
@@ -120,7 +125,9 @@
                 android:gravity="center_horizontal"
                 android:text="Recette :"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonGreen"
+                />
 
             <EditText
                 android:id="@+id/recetteEntreeInput"
@@ -134,7 +141,9 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/black"
                 android:text=" "
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonLightWhite"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -152,7 +161,9 @@
                 android:gravity="center_horizontal"
                 android:text="Prix par portion :"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonGreen"
+                />
 
             <EditText
                 android:id="@+id/prixEntreeInput"
@@ -166,7 +177,9 @@
                 android:inputType="numberDecimal"
                 android:textColor="@color/black"
                 android:text=" "
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonLightWhite"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -185,7 +198,9 @@
                 android:gravity="center_horizontal"
                 android:text="Difficulté :"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonGreen"
+                />
 
             <RatingBar
                 android:id="@+id/difficulteEntreeInput"
@@ -194,12 +209,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:background="@color/white"
+                android:background="@color/lightWhite"
                 android:fontFamily="@font/indie_flower"
                 android:numStars="5"
                 android:rating="3"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonLightWhite"
+                />
         </LinearLayout>
 
         <CheckBox
@@ -212,7 +229,9 @@
             android:gravity="center_horizontal"
             android:textColor="@color/black"
             android:textSize="@dimen/bigSize"
-            android:text="Vegetarien" />
+            android:text="Vegetarien"
+            style="@style/classicButtonLightWhite"
+            />
 
         <CheckBox
             android:id="@+id/veganEntreeInput"
@@ -224,7 +243,9 @@
             android:gravity="center_horizontal"
             android:textColor="@color/black"
             android:textSize="@dimen/bigSize"
-            android:text="Vegan" />
+            android:text="Vegan"
+            style="@style/classicButtonLightWhite"
+            />
 
         <CheckBox
             android:id="@+id/sansGlutenEntreeInput"
@@ -236,7 +257,9 @@
             android:gravity="center_horizontal"
             android:textColor="@color/black"
             android:textSize="@dimen/bigSize"
-            android:text="Sans gluten" />
+            android:text="Sans gluten"
+            style="@style/classicButtonLightWhite"
+            />
 
 
     </LinearLayout>
@@ -244,15 +267,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="@color/white"
-        android:fontFamily="@font/indie_flower"
-        android:textColor="@color/black"
         android:textSize="@dimen/bigMediumSize"
         android:layout_margin="5dp"
         android:gravity="center_horizontal"
         android:text="@string/nextStep"
         android:onClick="onClickCreateFirstStep"
         android:layout_alignParentBottom="true"
+        style="@style/classicButtonGreen"
         ></Button>
 
 </RelativeLayout>
