--- a/app/src/main/res/layout/activity_creer_ma_table_step2.xml
+++ b/app/src/main/res/layout/activity_creer_ma_table_step2.xml
@@ -24,11 +24,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:fontFamily="@font/indie_flower"
             android:text="@string/creer_ma_table"
-            android:textColor="@color/black"
             android:textSize="@dimen/bigSize"
             android:gravity="center_horizontal"
+            style="@style/classicButtonOrange"
             />
     </LinearLayout>
 
@@ -42,25 +41,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/white"
-                android:fontFamily="@font/indie_flower"
-                android:textColor="@color/black"
                 android:textSize="@dimen/bigSize"
-                android:layout_margin="5dp"
                 android:text="@string/importMenu"
                 android:onClick="onClickImportMenuButton"
+                style="@style/classicButtonOrange"
                 ></Button>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/white"
-                android:fontFamily="@font/indie_flower"
-                android:textColor="@color/black"
                 android:textSize="@dimen/bigSize"
-                android:layout_margin="5dp"
                 android:text="@string/createMenu"
                 android:onClick="onClickCreateMenuButton"
+                style="@style/classicButtonOrange"
                 ></Button>
 
 
