--- a/app/src/main/res/layout/activity_creer_mon_menu_step3.xml
+++ b/app/src/main/res/layout/activity_creer_mon_menu_step3.xml
@@ -30,6 +30,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/bigSize"
             android:gravity="center_horizontal"
+            style="@style/classicButtonYellow"
             />
     </LinearLayout>
 
@@ -53,7 +54,9 @@
                 android:gravity="center_horizontal"
                 android:text="Nom :"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonYellow"
+                />
             <EditText
                 android:id="@+id/dessertNameInput"
                 android:layout_width="match_parent"
@@ -66,7 +69,9 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/black"
                 android:text=" "
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonLightWhite"
+                />
 
 
         </LinearLayout>
@@ -86,7 +91,9 @@
                 android:gravity="center_horizontal"
                 android:text="Ingrédients :"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonYellow"
+                />
 
             <EditText
                 android:id="@+id/ingredientDessertInput"
@@ -100,7 +107,9 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/black"
                 android:text=" "
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonLightWhite"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -118,7 +127,9 @@
                 android:gravity="center_horizontal"
                 android:text="Recette :"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonYellow"
+                />
 
             <EditText
                 android:id="@+id/recetteDessertInput"
@@ -132,7 +143,9 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/black"
                 android:text=" "
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonLightWhite"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -150,7 +163,9 @@
                 android:gravity="center_horizontal"
                 android:text="Prix par portion :"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonYellow"
+                />
 
             <EditText
                 android:id="@+id/prixDessertInput"
@@ -164,7 +179,9 @@
                 android:inputType="numberDecimal"
                 android:textColor="@color/black"
                 android:text=" "
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonLightWhite"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -183,7 +200,9 @@
                 android:gravity="center_horizontal"
                 android:text="Difficulté :"
                 android:textColor="@color/black"
-                android:textSize="@dimen/bigSize" />
+                android:textSize="@dimen/bigSize"
+                style="@style/classicButtonYellow"
+                />
 
             <RatingBar
                 android:id="@+id/difficulteDessertInput"
@@ -192,7 +211,7 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:background="@color/white"
+                android:background="@color/lightWhite"
                 android:fontFamily="@font/indie_flower"
                 android:numStars="5"
                 android:rating="3"
@@ -210,7 +229,9 @@
             android:gravity="center_horizontal"
             android:textColor="@color/black"
             android:textSize="@dimen/bigSize"
-            android:text="Vegetarien" />
+            android:text="Vegetarien"
+            style="@style/classicButtonLightWhite"
+            />
 
         <CheckBox
             android:id="@+id/veganDessertInput"
@@ -222,7 +243,9 @@
             android:gravity="center_horizontal"
             android:textColor="@color/black"
             android:textSize="@dimen/bigSize"
-            android:text="Vegan" />
+            android:text="Vegan"
+            style="@style/classicButtonLightWhite"
+            />
 
         <CheckBox
             android:id="@+id/sansGlutenDessertInput"
@@ -234,7 +257,9 @@
             android:gravity="center_horizontal"
             android:textColor="@color/black"
             android:textSize="@dimen/bigSize"
-            android:text="Sans gluten" />
+            android:text="Sans gluten"
+            style="@style/classicButtonLightWhite"
+            />
 
 
     </LinearLayout>
@@ -242,15 +267,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="@color/white"
         android:fontFamily="@font/indie_flower"
-        android:textColor="@color/black"
         android:textSize="@dimen/bigMediumSize"
-        android:layout_margin="5dp"
         android:gravity="center_horizontal"
         android:text="@string/nextStep"
         android:onClick="onClickCreateThirdStep"
         android:layout_alignParentBottom="true"
+        style="@style/classicButtonYellow"
+
         ></Button>
 
 </RelativeLayout>
